# Python-vs-Cpp

./: CMakeLists.txt  README.md  shell.nix
assets/: cpp-guy.png~  python-cpp.kra  python-cpp.kra-autosave.kra  python-cpp.kra~  python-guy.png~
main/: main.cpp
